vbnc/vbnc/tests/Errors/36759.vb
Class Test

    Public Property AutoImpPropWithArgument(argOne As Integer, argTwo as Integer) As Integer

End Class